@@ -1,6 +1,7 @@
 package thaumicenergistics.gui;
 
 import net.minecraft.client.Minecraft;
+import net.minecraft.client.gui.Gui;
 import net.minecraft.client.gui.GuiButton;
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.util.ResourceLocation;
@@ -15,11 +16,88 @@ import thaumicenergistics.network.packet.server.Packet_S_KnowledgeInscriber;
 import thaumicenergistics.registries.ThEStrings;
 import thaumicenergistics.texture.GuiTextureManager;
 
-// TODO: QOL: Knowledge Inscriber GUI: add particles like focal manipulator
-
 public class GuiKnowledgeInscriber
 	extends AbstractGuiBase
 {
+	private class SaveParticle
+	{
+		private int startX, startY;
+		private int distX, distY;
+		private float percent;
+		private int slot;
+
+		public SaveParticle( final int slotNumber )
+		{
+			// Set percentage
+			this.percent = 1.0f;
+
+			// Set slot
+			this.slot = slotNumber;
+
+			// Calculate starting postion
+			this.startX = ContainerKnowledgeInscriber.CRAFTING_SLOT_X + (
+							( slotNumber % ContainerKnowledgeInscriber.CRAFTING_COLS )
+							* ContainerKnowledgeInscriber.CRAFTING_SLOT_SPACING );
+
+			this.startY = ContainerKnowledgeInscriber.CRAFTING_SLOT_Y + (
+							( slotNumber / ContainerKnowledgeInscriber.CRAFTING_COLS )
+							* ContainerKnowledgeInscriber.CRAFTING_SLOT_SPACING );
+
+			// Calculate distances
+			this.distX = ContainerKnowledgeInscriber.KCORE_SLOT_X - this.startX;
+			this.distY = ContainerKnowledgeInscriber.KCORE_SLOT_Y - this.startY;
+		}
+
+		/**
+		 * Draws the particle. Assumes prepare and finish are called elsewhere.
+		 * 
+		 * @param gui
+		 * @param percentDelta
+		 * @param frame
+		 */
+		public void draw( final Gui gui, final float percentDelta, final int frame )
+		{
+			// Add delta
+			this.percent += percentDelta;
+
+			// Bounds check
+			if( this.percent >= 1.0f )
+			{
+				this.percent = 1.0f;
+			}
+			else if( this.percent < 0 )
+			{
+				return;
+			}
+
+			// Calculate X and Y
+			int X = this.startX + (int)( this.distX * this.percent );
+			int Y = this.startY + (int)( this.distY * this.percent );
+
+			// Draw
+			GuiParticle.Knowledge.drawParticle( gui, X, Y, frame, 0.2f, 0.5f, 1.0f, false );
+		}
+
+		/**
+		 * Returns true if the particle is not finished drawing
+		 * 
+		 * @return
+		 */
+		public boolean notFinished()
+		{
+			return( this.percent < 1.0f );
+		}
+
+		/**
+		 * Prepares the particle to be draw again.
+		 */
+		public void reset()
+		{
+			// Set percentage
+			this.percent = -( this.slot / 8.0f );
+		}
+	}
+
 	/**
 	 * Gui size.
 	 */
@@ -51,6 +129,16 @@ public class GuiKnowledgeInscriber
 	private CoreSaveState saveState = CoreSaveState.Disabled_MissingCore;
 
 	/**
+	 * Save particles
+	 */
+	private SaveParticle[] particles;
+
+	/**
+	 * True if particles need to be drawn.
+	 */
+	private boolean hasParticlesToDraw = false;
+
+	/**
 	 * Player viewing the GUI.
 	 */
 	private EntityPlayer player;
@@ -69,6 +157,39 @@ public class GuiKnowledgeInscriber
 
 		// Set title
 		this.title = ThEStrings.Block_KnowledgeInscriber.getLocalized();
+
+		// Setup the particles
+		this.particles = new SaveParticle[ContainerKnowledgeInscriber.CRAFTING_COLS * ContainerKnowledgeInscriber.CRAFTING_ROWS];
+		for( int index = 0; index < this.particles.length; ++index )
+		{
+			this.particles[index] = new SaveParticle( index );
+		}
+	}
+
+	private void drawSaveParticles()
+	{
+		int time = (int)( System.currentTimeMillis() % Integer.MAX_VALUE );
+
+		// Calculate frame number
+		int frame = ( time / 125 );
+
+		// Set percent delta
+		// NOTE: This should be time based, not FPS based. But lazy.
+		float percentDelta = 0.03f;
+
+		// Assume all particles are drawn
+		this.hasParticlesToDraw = false;
+
+		GuiParticle.Knowledge.prepareDraw();
+		for( int index = 0; index < this.particles.length; ++index )
+		{
+			// Draw the particle
+			this.particles[index].draw( this, percentDelta, frame );
+
+			// Is the particle not done?
+			this.hasParticlesToDraw |= this.particles[index].notFinished();
+		}
+		GuiParticle.finishDraw();
 	}
 
 	/**
@@ -120,6 +241,12 @@ public class GuiKnowledgeInscriber
 			// Draw the tooltip
 			this.drawTooltip( mouseX - this.guiLeft, mouseY - this.guiTop, true );
 		}
+
+		// Any particles to draw?
+		if( this.hasParticlesToDraw )
+		{
+			this.drawSaveParticles();
+		}
 	}
 
 	@Override
@@ -155,8 +282,9 @@ public class GuiKnowledgeInscriber
 	 * functionality.
 	 * 
 	 * @param saveState
+	 * @param justSaved
 	 */
-	public void onReceiveSaveState( final CoreSaveState saveState )
+	public void onReceiveSaveState( final CoreSaveState saveState, final boolean justSaved )
 	{
 		// Set the state
 		this.saveState = saveState;
@@ -165,6 +293,17 @@ public class GuiKnowledgeInscriber
 		if( this.saveButton != null )
 		{
 			this.saveButton.setSaveState( saveState );
+		}
+
+		// Was a pattern just saved?
+		if( justSaved )
+		{
+			// Reset all particles
+			for( int index = 0; index < this.particles.length; ++index )
+			{
+				this.particles[index].reset();
+			}
+			this.hasParticlesToDraw = true;
 		}
 	}
 }
